--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -4,36 +4,36 @@
 
 >>![center](http://chyo.ru/360705491556.png)<<
 
-Началось все с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6.5 миллионов хешей от паролей. Пароли было выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
+Началось всё с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6,5 миллионов хешей от паролей. Пароли было выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
 
 [Вот самый полный текст про взлом, на arstechnica](http://arstechnica.com/security/2012/06/8-million-leaked-passwords-connected-to-linkedin/).
 
-База содержала 6.5 миллионов из более чем сотни миллионов пользователей сервиса, однако это, конечно, очень серьезный фейл. Судя по тому, сколько людей используют **очень** простые пароли - о безопасности не пекутся даже те, кто пользуется linkedin. Да что там. Вчера вечером кто-то оперативно запустил сайт [LeakedIn.org](http://leakedin.org), на котором можно ввести свой пароль от линкедина и проверить, нет ли его в базе. **СТОЙТЕ!** Надеюсь, мои читатели умнее и не будут писать свой пароль во всякие неизвестные сайты, правда?
+База содержала 6,5 миллионов из более чем сотни миллионов пользователей сервиса, однако это, конечно, очень серьёзный фейл. Судя по тому, сколько людей используют **очень** простые пароли - о безопасности не пекутся даже те, кто пользуется linkedin. Да что там. Вчера вечером кто-то оперативно запустил сайт [LeakedIn.org](http://leakedin.org), на котором можно ввести свой пароль от линкедина и проверить, нет ли его в базе. **СТОЙТЕ!** Надеюсь, мои читатели умнее и не будут писать свой пароль во всякие неизвестные сайты, правда?
 
 Я попросил комментариев об этой ситуации у эксперта по безопасности, [Антона Карпова](http://twitter.com/toxo4ka).
 
 > Мы не знаем, как именно и через какую уязвимость утекли хэши паролей LinkedIn. Однако мы можем точно сказать, что компания могла бы применить больше мер защиты самих хэшей от взлома. Для хэширования паролей в LinkedIn использовался алгоритм SHA-1 без соли. Это плохо по трем причинам:
 >
-> * Отсутствие соли позволяет использовать заранее подготовленные "радужные таблицы" для взлома
-> * SHA-1 хорошо распараллеливается на GPU
-> * Linkedin не использовала никаких механизмов усиления ключа, а просто хэширование пароля "в лоб" без соли
+> * Отсутствие соли позволяет использовать заранее подготовленные "радужные таблицы" для взлома,
+> * SHA-1 хорошо распараллеливается на GPU,
+> * Linkedin не использовала никаких механизмов усиления ключа, а просто хэширование пароля "в лоб", без соли.
 > 
-> Если бы LinkedIn использовала механизм для усиления ключа (key stretching), например, PBKDF2, то взлом хэшей был бы существенно затруднен. Основная идея таких механимов: использование соли и многократный "проход" по функции, что затрудняет взлом: с солью посчитать хэши заранее не удастся, а, например, 1000 вычислений хэша (как рекомендуется в том же PBKDF2) потребует больше ресурсов, чем одно вычисление. В идеале к этому еще можно добавить выбор хэш-функции, которую трудно распараллелить на GPU, например, bcrypt.
+> Если бы LinkedIn использовала механизм для усиления ключа (key stretching), например, PBKDF2, то взлом хэшей был бы существенно затруднён. Основная идея таких механимов: использование соли и многократный "проход" по функции, что затрудняет взлом: с солью посчитать хэши заранее не удастся, а, например, 1000 вычислений хэша (как рекомендуется в том же PBKDF2) потребует больше ресурсов, чем одно вычисление. В идеале к этому еще можно добавить выбор хэш-функции, которую трудно распараллелить на GPU, например, bcrypt.
 > 
 > Чтение по теме:
 > 
 > * [Wikipedia: Bcrypt](http://en.wikipedia.org/wiki/Bcrypt)
 > * [Wikipedia: PBKDF2](http://en.wikipedia.org/wiki/PBKDF2)
 
-Такие дела, братцы. Думайте сами. А сам LinkedIn пока пишет что "ведет расследование" и "пока никакой взлом не подтвердился". ChronedIn, или LinkedPay. Вы, кстати, поняли мою шутку?
+Такие дела, братцы. Думайте сами. А сам LinkedIn пока пишет что "ведёт расследование" и "пока никакой взлом не подтвердился". ChronedIn, или LinkedPay. Вы, кстати, поняли мою шутку?
 
 UPD: Линкедин написали пост в блоге о том, что данные действительно украдены и всем пострадавшим разосланы сообщения о сбросе пароля. Кто говорил, что мы рано раздуваем панику?
 
 -----
 
 ## Для всех
-* [Гугл объявил о запуске 3d карт, причем раньше чем Apple](http://www.engadget.com/2012/06/06/google-maps-earth-take-on-full-3d-maps/). Фишка в умении построить 3д объекты по аэрофотоснимкам с углом в районе 45%. Идея прекрасная, только я думал, что патенты на это дело принадлежат C3, т.е. Apple {maps} {gmaps} {google} {3d}
-* [В том же запуске гугл объявил, что в картах для мобильных появится оффлайн кеш](http://techcrunch.com/2012/06/06/google-maps-for-mobile-gets-offline-maps/).  {gmaps} {mobile}
+* [Гугл объявил о запуске 3D-карт, причём раньше чем Apple](http://www.engadget.com/2012/06/06/google-maps-earth-take-on-full-3d-maps/). Фишка в умении построить 3д объекты по аэрофотоснимкам с углом в районе 45%. Идея прекрасная, только я думал, что патенты на это дело принадлежат C3, т.е. Apple {maps} {gmaps} {google} {3d}
+* [В том же запуске гугл объявил, что в картах для мобильных появится оффлайн кэш](http://techcrunch.com/2012/06/06/google-maps-for-mobile-gets-offline-maps/).  {gmaps} {mobile}
 * [Продажа компании не сделает вас счастливым](http://ryancarson.com/post/24480936689/selling-your-company-doesnt-make-you-happy). Это то, что я твержу всем "стартаперам". Цель должна быть в другом. Изменить мир, улучшить жизнь людей, мир во всем мире, наконец. А делать что-то на продажу - почти всегда скучно и бессмысленно. {startup} {morale}
 * [Письмо (довольно старое) Тима Бернерса-Ли о том, как должны вести себя десктоп-приложения на основе HTML](http://lists.w3.org/Archives/Public/public-webapps/2012JanMar/0464.html#start464). Я там готов подписаться под каждым словом. Ровно по этому пути сейчас идет Mozilla, предоставляя API для кучи вызовов OS. Очень умный мужик. Тим, не я, конечно. {html} {apps}
 * [Боже ж ты мой, thunderbird монетизируют!](http://arstechnica.com/information-technology/2012/06/personalized-e-mail-feature-in-thunderbird-13-lets-users-register-a-domain-name/) Теперь в тандерберде можно будет купить домен для собственной почты. Я в шоке, что, у мозиллы фаундейшн настолько всё плохо? {mozilla} {thunderbird} {money}
@@ -52,9 +52,9 @@ UPD: Линкедин написали пост в блоге о том, что 
 
 
 ## Для гиков
-* [По свежим замерам Ruby1.9 быстрее всех скриптовых языков](http://www.unlimitednovelty.com/2012/06/ruby-is-faster-than-python-php-and-perl.html). Мы верим? Вроде нет. {ruby} {speed}
+* [По свежим замерам Ruby 1.9 быстрее всех скриптовых языков](http://www.unlimitednovelty.com/2012/06/ruby-is-faster-than-python-php-and-perl.html). Мы верим? Вроде нет. {ruby} {speed}
 * [RJSON - идея как компрессировать JSON с помощью JSON](http://www.cliws.com/e/06pogA9VwXylo_GknPEeFA/). Не, это не рекурсия, это просто такая странная идея - ужимать словари в JSON с помощью массивов. Работает хорошо. {javascript} {json}
-* [Пост от автора PhoneGap: ну что, PhoneGapные приложения ужасны, но вы сами в этом виноваты](http://sintaxi.com/you-half-assed-it). С понятными жалобами на разработчиков, которым плевать как работает их приложение. {phonegap} {code}
+* [Пост от автора PhoneGap: ну что, PhoneGap-ные приложения ужасны, но вы сами в этом виноваты](http://sintaxi.com/you-half-assed-it). С понятными жалобами на разработчиков, которым плевать как работает их приложение. {phonegap} {code}
 * [Нэд Батчелдер опять капитанит, на этот раз про опасность eval'ов](http://nedbatchelder.com/blog/201206/eval_really_is_dangerous.html). {python} {code}
 * [Снова вернулся к жизни сайт Django People](https://people.djangoproject.com/). Россиян там прямо сейчс 306! {django}
 * [ОООО! Штука о которой я мечтаю! Electronic Imp](http://www.electricimp.com/), как старый добрый EyeFi, но не только для фотографий. И есть API, а значит, можно будет понаписать модулей и фоткать сразу на яндекс.диск, как я и хочу! {eyefi} {electricimp}
