--- a/source/posts/2012-06-07.md
+++ b/source/posts/2012-06-07.md
@@ -4,7 +4,7 @@
 
 >>![center](http://chyo.ru/360705491556.png)<<
 
-Началось всё с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6,5 миллионов хешей от паролей. Пароли было выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
+Началось всё с того, что на форуме insidepro.com некто Polimo написал, что подобрал 236578 паролей из базы линкдина и выложил базу, содержащую 6,5 миллионов хешей от паролей. Пароли были выложены без имени пользователя, есть подозрение, что у автора файла имена пользователей есть.
 
 [Вот самый полный текст про взлом, на arstechnica](http://arstechnica.com/security/2012/06/8-million-leaked-passwords-connected-to-linkedin/).
 
