"бесплатных аудио плейера" -> "бесплатных аудиоплееров"

--- a/source/posts/2012-06-09.md
+++ b/source/posts/2012-06-09.md
@@ -17,7 +17,7 @@
 * [Анализ доменных имен.](http://datagenetics.com/blog/march22012/index.html) Вероятнее всего последний в эпохе ограниченых TLD. Отчет очень крутой, я его даже звездочкой пометил. {dns} {tld} {stats} {*}
 * [Владелец Flame послал "код самоубийства",](http://www.bbc.com/news/technology-18365844) благодаря чему довольно много машин перестали быть заражены этой малварью. Чем дальше тем ближе мы к Стивенсу. {flame} {security}
 * [LinkedIn обратился в ФБР](http://www.reuters.com/article/2012/06/07/us-linkedin-breach-idUSBRE85511820120607) чтобы выяснить, кто увел их базу паролей. Это, кажется, называется "расписаться в бессилии". {linkedin} {fbi} {security}
-* [15 бесплатных HTML5 аудио плейера.](http://www.instantshift.com/2012/06/08/15-free-html5-audio-players-for-your-website-and-blogs/) Специально для подкастеров и Умпутуна! {umputun} {html} {audio}
+* [15 бесплатных HTML5 аудиоплееров.](http://www.instantshift.com/2012/06/08/15-free-html5-audio-players-for-your-website-and-blogs/) Специально для подкастеров и Умпутуна! {umputun} {html} {audio}
 * [Windows Azure обновился.](http://www.zdnet.com/blog/btl/windows-azure-re-imagined-microsofts-fit-for-the-cloud/79561) Теперь в нем нормально работает Linux :) Ну, и сервисы свои обновились. {azure} {paas} {iaas} {linux}
 * [YouTube, Netflix и Facebook удвоили трафик IPv6](http://mashable.com/2012/06/07/ipv6-traffic-netflix/) буквально за сутки. Это победа, я считаю. {ipv6} {youtube} {facebook}
 * [Желтая пресса взорвалась этой новостью: Северная Корея поставляет для Южной Кореи игры, зараженные малварью.](http://www.zdnet.com/blog/security/north-korea-ships-malware-infected-games-to-south-korean-users-uses-them-to-launch-ddos-attacks/12383) Потом малварь используется для DDoSов, видимо, в первую очередь южнокорейских сайтов. {malware} {security} {fun} {*}
