правки, как всегда

--- a/source/posts/2012-06-08.md
+++ b/source/posts/2012-06-08.md
@@ -1,7 +1,7 @@
 # Выпуск без темы дня
 
 Знаете, сегодня темой дня должна была стать сетевая безопасность.
-Но я тут подумал. Нет, не буду ничего писать. Просто читайте новости.
+Но я тут подумал… Нет, не буду ничего писать. Просто читайте новости.
 
 >>![center](http://chyo.ru/360801825735.png)<<
 
@@ -9,7 +9,7 @@
 
 ## Для всех
 
-* [Твиттер KoreLogic, которые собирают информацию по последним хакам.](https://twitter.com/#!/CrackMeIfYouCan) В частности, по двум, описаным ниже. Очень много информации; пожалуй, зафолловлю. {twitter} {security} {*}
+* [Твиттер KoreLogic, которые собирают информацию по последним хакам.](https://twitter.com/#!/CrackMeIfYouCan) В частности, по двум, описанным ниже. Очень много информации; пожалуй, зафолловлю. {twitter} {security} {*}
 * [Last.fm сообщили, что у них украли базу пользователей.](http://www.lastfm.ru/passwordsecurity) 17 миллионов MD5, без соли. Стыд и позор. {security} {lastfm} {*}
 * [eHarmony сообщили, что у них украли базу пользователей.](http://arstechnica.com/security/2012/06/eharmony-confirms-member-passwords-compromise/) 1,5 миллиона плейнтекстов и MD5, без соли. Стыд и позор. {security} {eharmony} {*}
 * [Почините свой сайт: 5 лёгких уроков](http://www.inc.com/michael-mothner/fix-your-website-5-things-to-change-now.html), которые надо выполнить, чтобы осовременить сайт. Я бы сказал, что это особенно важно на мобильных. {sites} {design}
@@ -17,7 +17,7 @@
 * [Хром для windows8 будет в следующем релизе.](http://techcrunch.com/2012/06/07/chrome-for-metro-set-to-arrive-in-next-dev-channel-release/) Точнее, в следующем релизе в разработческом канале. Посмотрим, что там за адаптация к  стилю Metro. {chrome} {windows8} {browser}
 * [400 миллионов твитов в день.](http://news.cnet.com/8301-1023_3-57448388-93/twitter-hits-400-million-tweets-per-day-mostly-mobile/) В основном, с мобильного. И внутри ещё немного ура-статистики от нашего любимого твиттера. {twitter} {stats} {*}
 * [Должен ли я джейлбрейкать свой айфон?](http://www.businessinsider.com/iphone-jailbreaking-2012-6) Конечно, должен! В сидии чудеса, чесслово. {iphone} {jailbrake} {mobile}
-* [Куча вещей, которые замедляют браузинг.](http://news.yahoo.com/blogs/upgrade-your-life/speed-browsing-161606208.html) Капитанская статья, о том что все расширения тормозят браузинг. Мы же с вами взрослые люди, и понимаем, что такое "разменять функциональность на производительность"? Интересно в статье, что автор считает самым быстрым Firefox, потом Хром, IE и на последнем месте - Safari. {browser}
+* [Куча вещей, которые замедляют браузинг.](http://news.yahoo.com/blogs/upgrade-your-life/speed-browsing-161606208.html) Капитанская статья, о том, что все расширения тормозят браузинг. Мы же с вами взрослые люди, и понимаем, что такое "разменять функциональность на производительность"? Интересно в статье, что автор считает самым быстрым Firefox, потом Хром, IE и на последнем месте - Safari. {browser}
 * [Эппл встретит facebook app center с распростёртыми объятиями.](http://thenextweb.com/insider/2012/06/07/heres-why-apple-will-welcome-facebooks-app-center-with-open-arms/) Видимо, потому что у Apple традиционно не ладится с соцсетями, и партнёр на этом поле им очень не помешает. {apple} {facebook} {appstore}
 * [9 прекрасных тулзов для создания черновиков дизайна.](http://mashable.com/2012/06/07/mockup-tools/) Нет, в этой области есть не только бальзамик, но и другие интересные штуки. {design} {balsamiq}
 * [Форсквер перекрасился в блондинку!](http://techcrunch.com/2012/06/06/foursquare-gets-a-new-look-redesign-makes-checking-in-stickier-and-more-social/) Точнее, он перекрасился в фейсбук, теперь просто очень похож. Надеются, что будет больше чекинов. Вы верите? Я - нет. {foursquare} {facebook} {design}
@@ -26,8 +26,8 @@
 ## На грани
 
 * [Почему это вы не используете SVG?](http://net.tutsplus.com/tutorials/why-arent-you-using-svg/) Я - использую, где могу. {svg} {browser} {html}
-* [Как создать вебсайт только на iPad.](http://webdesign.tutsplus.com/tutorials/workflow-tutorials/build-a-complete-website-on-an-ipad/) Да, сейчас iPad - это почти полноценная машина, с кучей приложений. Правда "рабочее место разработчика для iPad" стоит почти $70, что для софта дороговато. {ipad} {code} {mobile}
-* [Бурке умудрился договориться с Microsoft! Шок! Картинки!](http://www.wired.com/wiredenterprise/2012/06/microsoft-and-red-hat/) (Я мастер заголовков теперь). В общем, теперь все линуксы начиная с redhat буду иметь возможность ставиться на машины с UEFI (и win8) на борту. $99 за сертификацию каждого ядра, насколько я понял. {uefi} {redhat}
+* [Как создать вебсайт только на iPad.](http://webdesign.tutsplus.com/tutorials/workflow-tutorials/build-a-complete-website-on-an-ipad/) Да, сейчас iPad - это почти полноценная машина, с кучей приложений. Правда, "рабочее место разработчика для iPad" стоит почти $70, что для софта дороговато. {ipad} {code} {mobile}
+* [Бурке умудрился договориться с Microsoft! Шок! Картинки!](http://www.wired.com/wiredenterprise/2012/06/microsoft-and-red-hat/) (Я мастер заголовков теперь). В общем, теперь все линуксы, начиная с redhat, буду иметь возможность ставиться на машины с UEFI (и win8) на борту. $99 за сертификацию каждого ядра, насколько я понял. {uefi} {redhat}
 * [Новая эра в технологии: понимающие системы.](http://www.research.ibm.com/new-era-of-computing.shtml) Обзорная научпоп статья про базовые понятия. {science} {ibm}
 * [Простейший туториал, как дать пользователям редактировать контент](http://www.developerdrive.com/2012/06/allowing-users-to-edit-text-content-with-html5/) на вашем сайте с использованием HTML5. Точнее, с использованием javascript и локального стораджа. {html} {javascript} {tutorial}
 * [Тщательное изучение показало, что Flame был создан высокообразованными чуваками.](http://arstechnica.com/security/2012/06/flame-crypto-breakthrough/) В статье вообще написано, что учёными. Ничего удивительного, ботнеты уже очень давно - супердоходный бизнес. {security} {flame} {crypto}
@@ -46,5 +46,5 @@
 
 ## Разное
 
-* [7 признаков того, что у вас проблемы с порно.](http://psychcentral.com/blog/archives/2012/06/07/7-warning-signs-you-might-have-a-porn-problem/) Гики, ну не рассказывайте мне, что вы не понимаете о чем речь! {fun} {pr0n}
+* [7 признаков того, что у вас проблемы с порно.](http://psychcentral.com/blog/archives/2012/06/07/7-warning-signs-you-might-have-a-porn-problem/) Гики, ну не рассказывайте мне, что вы не понимаете, о чем речь! {fun} {pr0n}
 
